z-index problems solved, working on sockets

--- a/frontend/styles/Custom/OpenMessages.module.scss
+++ b/frontend/styles/Custom/OpenMessages.module.scss
@@ -5,7 +5,7 @@
     font-size: 85px;
     color: pink;
     cursor: pointer;
-    z-index: 2;
+    z-index: 3;
     & svg {
         filter: drop-shadow( 0px 0px 20px rgba(121, 67, 104));
     }
